# Simple-RSS-Reader-using-KDE-Kirigami

./: .gitignore  CMakeLists.txt  LICENSE  README.md  org.kde.rss_reader.appdata.xml  org.kde.rss_reader.desktop
src/: CMakeLists.txt  main.cpp  resources.qrc  resources.qrc.depends
src/contents/ui/: AboutSheet.qml  FeedPage.qml  MainPage.qml  RssListView.qml  TestPage.qml  main.qml
src/contents/ui/components/: NoConnectPage.qml
src/contents/ui/models/: RssFeedModel.qml
src/include/: appsettings.cpp  appsettings.h  urlrssmodel.cpp  urlrssmodel.h
